@@ -6,3 +6,4 @@ ERROR:  lwgeom_subdivide: cannot subdivide to fewer than 5 vertices per output
 #3744|1600000000000000
 4|29321996468.6|29321996468.6|1857|256
 #4211|0.00008316000
+#4217|0.00002463668
